--- a/src/components/Email/EmailCard/EmailCard.module.css
+++ b/src/components/Email/EmailCard/EmailCard.module.css
@@ -1,4 +1,6 @@
 .EmailCard {
-    background: rgb(255, 255, 255);
-    border-bottom: 1px solid black;
+    /* margin-bottom: 0.8em; */
+    /* border-radius: 1em; */
+  
+    /* box-shadow: 0.2em 0.2em 0.3em 0.1em rgb(190, 190, 190); */
 }
