--- a/src/components/UI/Search/Search.module.css
+++ b/src/components/UI/Search/Search.module.css
@@ -1,9 +1,38 @@
 .Search {
-    width: 100%;
+    width: 30em;
 }
 
-.Search input {
+.Search form div {
     width: 100%;
-    height: 2.6em;
-    padding: 0.2em;
+    display: flex;
+}
+
+.Search form div label {
+    display: flex;
+    width: 3em;
+    padding: 0.4em;
+    align-items: center;
+    margin-left: auto;
+    background: rgb(150, 150, 150);
+    border-bottom-left-radius: 0.1em;
+    border-top-left-radius: 0.1em;
+}
+
+.Search form div label i {
+    font-size: 30px;
+    color: white;
+    display: block;
+}
+
+.Search form div input {
+    width: 100%;
+    margin-right: auto;
+    padding: 0.2em 0.6em;
+    background: lightgrey;
+    border: none;
+}
+
+.Search form div input:focus {
+    outline: none;
+    background-color: rgb(220, 231, 240);
 }
