--- a/src/containers/EmailContainer/EmailContainerHeader/EmailContainerHeader.module.css
+++ b/src/containers/EmailContainer/EmailContainerHeader/EmailContainerHeader.module.css
@@ -1,5 +1,9 @@
 .EmailContainerHeader {
+    display: flex;
+    align-items: center;
+    text-align: center;
     width: 100%;
-    height: 4vh;
-    background: rgb(122, 36, 36);
+    height: 6vh;
+    background: white;
+    border-bottom: 1px solid lightgrey;
 }
