--- a/src/components/Email/EmailsList/EmailsList.module.css
+++ b/src/components/Email/EmailsList/EmailsList.module.css
@@ -1,5 +1,6 @@
 .EmailsList {
-    width: 100%;
+    display: block;
+    min-width: 100%;
 }
 
 .EmailsList ul {
@@ -8,11 +9,11 @@
 
 .EmailsList ul li {
     padding: 0.4em;
-    background: rgb(245, 245, 245);
+    background: rgb(240, 240, 240);
     border-bottom: 1px solid rgb(190, 190, 190);
 }
 
 .EmailsList ul li:hover {
     cursor: pointer;
-    background: rgb(211, 211, 211);
+    background: rgb(200, 200, 200);
 }
