--- a/src/containers/EmailContainer/EmailContainerSidebar/EmailContainerSidebar.module.css
+++ b/src/containers/EmailContainer/EmailContainerSidebar/EmailContainerSidebar.module.css
@@ -23,7 +23,7 @@
     display: block;
     width: 100%;
     padding: 0.2em 2em;
-    color: gray;
+    color: black;
     background: white;
     font-size: 18px;
 }
