--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,13 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1em;
     letter-spacing: 0.01em;
     font-weight: 100;
-    font-family: "Fira Sans", Georgia, serif;
+    font-family: sans-serif;
+    color: rgb(70, 70, 70);
 }
 
 h1 { font-size: 2.4em; }
 h2 { font-size: 2.0em; }
-h3 { font-size: 1.8em; }
+h3 { font-size: 1.6em; }
 h4 { font-size: 1.4em; }
 h5 { font-size: 1.2em; }
 h6 { font-size: 1.1em; }
