--- a/src/components/Email/EmailDetailContainer/EmailDetailContainer.module.css
+++ b/src/components/Email/EmailDetailContainer/EmailDetailContainer.module.css
@@ -1,26 +1,15 @@
 .EmailDetailContainer {
    padding: 2em;
    width: 65%;
-   background: rgb(245, 245, 245);
+   background: var(--site-color-secondary-background);
    max-height: 94vh;
    overflow-y: scroll;
 }
 
-/* .EmailDetailContainer ul {
-
-}
-
-.EmailDetailContainer ul  li {
-   background: white;
-   border: 1px solid lightgray;
-   padding: 0.4em;
-} */
-
 .EmailMessageContainer {
    padding: 1em;
    border-radius: 0.3em;
-   border: 1px solid lightgray;
-   /* background: lightgray; */
-   background: white;
+   border: 1px solid var(--site-color-border-basic);
+   background: var(--site-color-basic-background);
 }
 
