--- a/src/components/Email/EmailListContainer/EmailFilter/EmailFilter.module.css
+++ b/src/components/Email/EmailListContainer/EmailFilter/EmailFilter.module.css
@@ -1,11 +1,10 @@
 .EmailFilter {
     width: 100%;
     height: 3em;
-    background: rgb(245, 245, 245);
-    border-bottom: 1px solid lightgrey;
+    background: var(--site-color-secondary-background);
+    border-bottom: 1px solid var(--site-color-border-basic);
     display: flex;
 }
-
 
 .EmailFilter span {
     padding-top: 0.6em;
@@ -13,8 +12,8 @@
     padding-right: 1em;
     display: block;
     height: 100%;
-    background: white;
-    border: 1px solid gray;
+    background: var(--site-color-basic-background);
+    border: 1px solid var(--site-color-border-basic);
     border-right: none;
 }
 
@@ -24,12 +23,11 @@
 
 .EmailFilter select {
     height: 100%;
-    border: 1px solid gray;
+    border: 1px solid var(--site-color-border-basic);
     padding-left: 1em;
     cursor: pointer;
 }
 
-
 .EmailFilter select:focus {
-    border: 1px solid gray;
+    border: 1px solid var(--site-color-border-basic);
 }
