--- a/src/containers/EmailContainer/EmailContainerHeader/EmailContainerHeader.module.css
+++ b/src/containers/EmailContainer/EmailContainerHeader/EmailContainerHeader.module.css
@@ -4,8 +4,8 @@
     text-align: center;
     width: 100%;
     height: 6vh;
-    background: white;
-    border-bottom: 1px solid lightgrey;
+    background: var(--site-color-basic-background);
+    border-bottom: 1px solid var(--site-color-border-basic);;
 }
 
 .EmailContainerHeader nav {
@@ -25,7 +25,7 @@
 
 .EmailContainerHeader nav ul li:first-child {
     border-radius: 0.3em;
-    border: 1px solid lightgray;
+    border: 1px solid var(--site-color-border-basic);
     box-shadow: 0.1em 0.1em 0.2em 0.1em rgb(230, 229, 229);
 }
 
